fix: Use overflow prop to prevent input overflow
This works a lot better than a756f159029355139df494c115b2ef33cc3ff823
since it breaks the whole word on to the next line if it overflows.

--- a/src/features/form/components/CustomEditor.css
+++ b/src/features/form/components/CustomEditor.css
@@ -1,8 +1,6 @@
 .text-editor {
   color: hsl(0, 0%, 30%);
   margin-top: 0.6rem;
-  overflow-wrap: break-word;
-  word-break: break-all;
 }
 
 /* Targeting the classes in 'react-quill/dist/quill.snow.css'. */
