--- a/src/features/form/components/Inputs.css
+++ b/src/features/form/components/Inputs.css
@@ -1,6 +1,7 @@
 .input {
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 @media (max-width: 768px) {
